# fuseAiF_wk2_customer_api_app

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  crud.py  database.py  employees_router.py  logger.py  models.py  offices_router.py  orderdetails_router.py  orders_router.py  payments_router.py  productlines_router.py  products_router.py  router.py  schemas.py  stats_router.py
