[project]
name = "fuseaif-wk2-customer-api-app"
version = "0.1.0"
description = "Customer API application for Fuse AI Fellowship"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "sqlalchemy==2.0.49",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2"
]
